--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -30,7 +30,7 @@
 		<span class="top_ui_tool ui_tool_margin" id="rotate-right" onclick="rotate_Right();"> 
 			<i class="bi bi-arrow-clockwise"></i> <div style="font-size: 15px;">&nbsp;&nbsp;  Rotate </div> </span>
 
-		<span class="top_ui_tool ui_tool_margin" id="trash" onclick="trashcan();">
+		<span class="top_ui_tool ui_tool_margin" id="trash" onclick="">
 			&nbsp;&nbsp;&nbsp;&nbsp;<i class="bi bi-trash"></i> <div style="font-size: 15px;"> Drag saved tools here to delete</div> </span>
 	</div>
 
@@ -60,7 +60,7 @@
 	<div id="drag_ui" style="border:3px solid black;"> 
 		<div class="qs_ui" id="drag_icon"> <i style="height:30px;width:99px;" class="bi bi-grip-horizontal" ></i> </div>
 		<!-- <div class="qs_ui" id="drag_info" style="font-size:10px;height:38px;background-color:skyblue" onclick="trashcan();"> Click here to delete saved tools</div> -->
-		<div class="qs_ui" id="qs_tools" style="height:60px;"> Drag a pencil, eraser or bucket here to save and click again to use! </div>
+		<div class="qs_ui" id="qs_tools" style="height:60px; font-size: 17px;"> Drag a pencil, eraser or bucket here to save and click again to use! </div>
 		<div class="qs_ui" id="collaspe" style="height:20px;"> <i class="bi bi-chevron-compact-up"></i> </div>
 		<div class="qs_ui" id="expand" style="height:20px;"> <i class="bi bi-chevron-compact-down"></i> </div>
 	</div>
@@ -274,25 +274,6 @@
 		}
 	}
 
-	// enables throwing away tools from quickslot
-	function trashcan() {
-		//var info = document.getElementById('drag_info');
-		if (trash_mode === true) {
-			trash_mode = false;
-			document.getElementById('trash').style.outline = "none";
-			//info.innerHTML = 'Click here to delete saved tools';
-			document.getElementById('drag_ui').style.border = "3px solid black";
-			//info.style.backgroundColor = 'skyblue';
-			return trash_mode;
-		} else {
-			trash_mode = true;
-			document.getElementById('trash').style.outline = "5px solid red";
-			document.getElementById('drag_ui').style.border = "3px solid red";
-			//info.innerHTML = '<b>Click a tool to delete</b> <br> Click this again to turn off delete mode';
-			//info.style.backgroundColor = 'red';
-			return trash_mode;
-		}
-	}
 
 	// zooms in on canvas
 	function zoomIn() {
